--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     "@angular/common": "~10.1.4",
     "@angular/compiler": "~10.1.4",
     "@angular/core": "~10.1.4",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~10.1.4",
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "bootstrap": "^4.6.0",
+    "firebase": "^8.2.9",
+    "flash-messages-angular": "^4.0.1",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
