--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "angular2-flash-messages": "^3.0.1",
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.9",
     "flash-messages-angular": "^4.0.1",
